# codex-canvas

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codex_canvas/: __init__.py  __main__.py  app.py  app.tcss  clipboard.py  models.py  runner.py
tests/: test_app.py  test_clipboard.py  test_runner.py
